Revert "chore: Merge develop and feat-egress-store-role into feat-secure-workspace-egress (#735)"
This reverts commit 40d54e80be17bde35b0b56c724bd27a85430e2f8.
